{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "367f58bb-5ade-4bc7-bead-15a7cf304de1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ab7a1997-0742-4d2f-a9f8-f6a2e934841d",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "92478d94-2a6d-4e4f-8fa4-8a0d0080df8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Powerup_1",
                    "type": "Button",
                    "id": "3417d682-016f-44c6-acd1-b56bebb12bf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Powerup_2",
                    "type": "Button",
                    "id": "3fe83949-afdf-4f77-9c13-8cb04d52bb17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Powerup_3",
                    "type": "Button",
                    "id": "9959205a-6387-4ce8-a72e-d97ae05bf61a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keboard",
                    "id": "3903ddb4-f032-44c5-bdbe-4199fa03c22d",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "44721978-7f5b-4636-9098-6e7b89dc99cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "33e1810c-f2a9-4c64-8388-a906ef36f3a0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "3dd99c5f-bbd0-4522-9ab4-aece28d556b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "236accc1-80e8-4f8f-9881-fd80cfbe75bb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b457f503-c1c9-4350-b3d0-bd6b1ffddf2a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "207b60d4-83e3-4dd8-b483-b01662eb1c78",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Powerup_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80d5642a-acce-40a9-80c8-64833adf03e4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Powerup_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99423051-e2f5-4e33-9d66-10a0ccf28c26",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Powerup_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "b5d28a13-c241-461f-a61b-8c6858b05007",
            "actions": [
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "20f882b3-6d3e-4585-a63b-4ebe2ce3f74f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "864c92ac-2f34-477c-b67d-1c2deda697a8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8886d9c2-8084-47db-b1c5-00b8c5f7dcfb",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}